--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
