Change endpoints to java app

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^2.6.5",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "sockjs": "0.3.4",
+    "stomp": "^0.1.1",
     "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
